<?xml version="1.0"?>
<package format="2">
  <name>test_pkg</name>
  <version>0.0.0</version>
  <description>The test_pkg package</description>

  <maintainer email="mkjade20@student.aau.dk">mkjade</maintainer>

  <license>MIT</license>

  <author email="mkjade20@student.aau.dk">mkjade</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

  <export>

  </export>
</package>
